sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value j
    j=1
    ^AlgInsertionSort:11: error: not found: value j
      if (!plusPetitQue(i-j:Int, v:Int)){
                          ^AlgInsertionSort:12: error: not found: value j
        setValeur((i-j+1):Int, getValeur(i-j:Int):Int)
                     ^AlgInsertionSort:12: error: not found: value j
        setValeur((i-j+1):Int, getValeur(i-j:Int):Int)
                                           ^AlgInsertionSort:13: error: not found: value j
        c=i-j
            ^AlgInsertionSort:14: error: not found: value j
        j=j+1
        ^